<resources>
    <string name="app_name">期权模拟交易</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="zixuan">自选</string>
    <string name="hangqing">行情</string>
    <string name="jiaoyi">交易</string>
    <string name="xinwen">新闻</string>
    <string name="qiquan">期权市场</string>
    <string name="zhengquan">证券市场</string>
    <string name="dingyue">订阅信息</string>
    <string name="todaynews">今日要闻</string>
    <string name="info">通知公告</string>
    <string name="dbactivity">东证活动</string>
    <string name="title">标题</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="pull_to_refresh_pull_label">下拉请求上一页</string>
    <string name="pull_to_refresh_release_label">松开后立即请求上一页</string>
    <string name="pull_to_refresh_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后立即请求下一页</string>
    <string name="pull_to_refresh_footer_pull_label">上拉查看下一页</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="today_arg">今天 %1$s</string>
    <string name="yesterday_arg">昨天 %1$s</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string-array name="day_of_week">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>
    <string-array name="jazz_artist_names">
        <item>Brad Mehldau</item>
        <item>Joshua Redman</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>
    <string name="tv_time">委托时间</string>
    <string name="tv_optionname">期权名称</string>
    <string name="tv_type">类型</string>
    <string name="tv_weituojia">委托价</string>
    <string name="tv_state">状态</string>
    <string name="tv_num">数量</string>
    <string name="tv_dealprice">成交价</string>
    <string name="maintab_option">自选</string>
    <string name="maintab_screen">筛选</string>
    <string name="maintab_info">消息</string>
    <string name="maintab_trade">交易</string>
    <string name="maintab_set">设置</string>
    <string name="IDS_HeYueShaiXuanQi">合约筛选器</string>
    <string name="IDS_ReChaoHeYue">热炒合约</string>
    <string name="IDS_TXingBaoJia">T型报价</string>
    <string name="IDS_ZhiXuan">自选</string>
    <string name="IDS_ShaiXuan">筛选</string>
    <string name="IDS_XiaoXi">消息</string>
    <string name="IDS_JiaoYi">交易</string>
    <string name="IDS_SheZhi">设置</string>
    <string name="IDS_HangQing">行情</string>
    <string name="IDS_TuPianMiaoShu">图片的描述</string>
    <string name="IDS_JiaoYiSheZhi">交易设置</string>
    <string name="IDS_QHJYMS">切换交易模式</string>
    <string name="IDS_PTJYMS">普通交易模式</string>
    <string name="IDS_BCZXSJ">保持在线时间</string>
    <string name="IDS_MINUTE">10分钟 </string>
    <string name="IDS_XDWXQR">下单无需确认</string>
    <string name="IDS_QBPCMRWTJG">全部平仓默认委托价格</string>
    <string name="IDS_DSJ">对手价 </string>
    <string name="IDS_KJFSMRWTJG">快捷反手默认委托价格</string>
    <string name="IDS_KJFSZDCDSJ">快捷反手自动撤单时间 </string>
    <string name="IDS_SECOND">10秒</string>
    <string name="IDS_JYSLMRJL">交易数量默认加量</string>
    <string name="IDS_GJJYANSX">高级交易按钮顺序</string>
    <string name="IDS_GJJYANSX_ARRAY">买开  买平   卖开  买平    </string>
    <string name="IDS_QTSZ">其他 </string>
    <string name="IDS_VERSON">版本号</string>
    <string name="IDS_VERSON_CONTENT">v 1.0 汇点期权 </string>
    <string name="IDS_MRCDSL">默认拆单手数 </string>
    <string name="IDS_BuyPing">买平</string>
    <string name="IDS_SellKai">卖开</string>
    <string name="IDS_YingYeTing">营业厅</string>
    <string name="IDS_ZhengQuanGongSi">交易站点</string>
    <string name="IDS_HuaTaiZhengQuan">华泰证券</string>
    <string name="IDS_ZhangHuLeiXing">账户类型</string>
    <string name="IDS_KeHuZhangHao">客户帐号</string>
    <string name="IDS_JiaoYiZhangHao">交易帐号</string>
    <string name="IDS_JiaoYiMiMa">交易密码</string>
    <string name="IDS_RenZhengKouLing">认证口令</string>
    <string name="IDS_RuMeiYouKeBuShu">如没有可不输</string>
    <string name="IDS_BaoCun">保存</string>
    <string name="IDS_DengLu">登录</string>
    <string name="IDS_XuanZheYinHang">选择银行 </string>
    <string name="IDS_JiaoTongYinHang">交通银行（人民币）</string>
    <string name="IDS_ZhuanZhangJinE">转账金额</string>
    <string name="IDS_Yuan">元 </string>
    <string name="IDS_YinHangMiMa">银行密码 </string>
    <string name="IDS_ZhuanZhang">转账</string>
    <string name="IDS_Wu">无 </string>
    <string name="IDS_KeZhuanJinE">可转金额</string>
    <string name="IDS_KeZhuanJinE_Content">98138.1</string>
    <string name="IDS_ZiJinMiMa">资金密码</string>
    <string name="IDS_Bank">银行</string>
    <string name="IDS_YinHangYuE">银行余额</string>
    <string name="IDS_ZhuanZhangLeiXing">转账类型</string>
    <string name="IDS_ZhuangTai">状态 </string>
    <string name="IDS_YinHangZhuanZhengQuan">银行转证券</string>
    <string name="IDS_ZhengQuanZhuanYinHang">证券转银行</string>
    <string name="IDS_ChaXun">查询</string>
    <string name="IDS_XuanZeJiaoYiMoShi">选择交易模式</string>
    <string name="IDS_MoRenJiaoYiMoShi">默认交易模式（买开+卖平）</string>
    <string name="IDS_Gaojijiaoyimoshi">高级交易模式</string>
    <string name="IDS_ShiHeRiNeiJiaoYiZhe">（买开+卖平+卖开+买平）</string>
    <string name="IDS_QueDing">确定</string>
    <string name="IDS_BiaoDi">标的</string>
    <string name="IDS_BiaoDiWu">标的物     :</string>
    <string name="IDS_QuanBuBiaoDi">全部标的</string>
    <string name="IDS_KanZhangDieFuDu">看涨跌幅度:</string>
    <string name="IDS_KanZhangFuDu">看涨幅度:</string>
    <string name="IDS_KanDieFuDu">看跌幅度:</string>
    <string name="IDS_GangGanBeiShu">杠杆倍数:</string>
    <string name="IDS_HuoYueDuDian">活跃度:</string>
    <string name="IDS_BuHuoYue">不活跃</string>
    <string name="IDS_YiBan">一般 </string>
    <string name="IDS_HuoYue">活跃</string>
    <string name="IDS_LiShiBoDong">历史波动   :</string>
    <string name="IDS_PingHuan">平缓</string>
    <string name="IDS_ZhengChang">正常</string>
    <string name="IDS_JuLie">剧烈 </string>
    <string name="IDS_KaiShiShaiXuan">开始筛选  </string>
    <string name="IDS_Back">返回</string>
    <string name="IDS_QingXuanZe">请选择</string>
    <string name="IDS_QiQuanName">期权名称</string>
    <string name="IDS_ZuiXinJia">最新价</string>
    <string name="IDS_ZhangDieFu">涨跌幅</string>
    <string name="IDS_YiJiaLv">溢价率</string>
    <string name="IDS_XingQuanJia">行权价</string>
    <string name="IDS_BuyJia">买价</string>
    <string name="IDS_BuyLiang">买量</string>
    <string name="IDS_SellJia">卖价</string>
    <string name="IDS_SellLiang">卖量</string>
    <string name="IDS_ZongLiang">总量</string>
    <string name="IDS_XianLiang">现量</string>
    <string name="IDS_ChiCangLiang">持仓量</string>
    <string name="IDS_CangCha">仓差</string>
    <string name="IDS_GangGanLv">杠杆率</string>
    <string name="IDS_ZhenShiGangGanLv">真实杠杆率</string>
    <string name="IDS_NeiZaiJiaZhi">内在价值</string>
    <string name="IDS_ShiJianJiaZhi">时间价值</string>
    <string name="IDS_ShiXuZhi">实虚值</string>
    <string name="IDS_DaoQiRi">到期日</string>
    <string name="IDS_ZhangDieE">涨跌额</string>
    <string name="IDS_YinHanBoDongLv">隐含波动率</string>
    <string name="IDS_MiMaLeiXing">密码类型</string>
    <string name="IDS_YuanJiaoYiMiMa">原交易密码 </string>
    <string name="IDS_QingShuRuYuanJiaoYiMiMa">请输入原交易密码</string>
    <string name="IDS_XinJiaoYiMiMa">新交易密码</string>
    <string name="IDS_QingShuRuXinJiaoYiMiMa">请输入新交易密码</string>
    <string name="IDS_XinMiMaQueRen">新密码确认</string>
    <string name="IDS_QingZaiShuRuYiCi">请在输入一次</string>
    <string name="IDS_XiuGaiChengGone">密码修改成功，请用新密码重新登录！</string>
    <string name="IDS_PingJunYingLi">平均盈利</string>
    <string name="IDS_PingJunYingLi1">-70%</string>
    <string name="IDS_PingJunYingLi2">-2160.00</string>
    <string name="IDS_PingJunYingLi3">-0.01%</string>
    <string name="IDS_BoDongYuQi">波动预期</string>
    <string name="IDS_Delta">Delta</string>
    <string name="IDS_Gamma">Gamma</string>
    <string name="IDS_Theta">Theta</string>
    <string name="IDS_Rho">Rho</string>
    <string name="IDS_Vega">Vega</string>
    <string name="IDS_YingLiGaiLv">盈利概率</string>
    <string name="IDS_DanZhangChengBen">单张成本 </string>
    <string name="IDS_HuoYueDu">活跃度</string>
    <string name="IDS_GuSuanSunYiBi"> 估算损益比</string>
    <string name="IDS_JiaGe">价格</string>
    <string name="IDS_ShouYiLv">收益率</string>
    <string name="IDS_ShouYi">收益</string>
    <string name="IDS_FaShengGaiLv">发生概率</string>
    <string name="IDS_TuoDong">拖动</string>
    <string name="IDS_ShanChu">删除</string>
    <string name="IDS_QiQuanSouSuo">期权搜索</string>
    <string name="IDS_GuanBi">关闭</string>
    <string name="IDS_QiQuanBiaoDi">期权标的:</string>
    <string name="IDS_DaoQiYueFen">到期月份:</string>
    <string name="IDS_QuanBuRiQi">全部日期</string>
    <string name="IDS_TouZhiFangXiang">投资方向:</string>
    <string name="IDS_RenGou">认购</string>
    <string name="IDS_RenGu">认沽</string>
    <string name="IDS_KuaiSuBaoJia">快速报价</string>
    <string name="IDS_JianPanBaoJia">键盘报价</string>
    <string name="IDS_JiaZaiZhongQingShaohou">加载中，请稍候……</string>
    <string name="IDS_SouSuo">搜索</string>
    <string name="IDS_BianJi">编辑</string>
    <string name="IDS_WoShiXinWenGongGaoXiangXiYe">我是新闻公告详细页</string>
    <string name="IDS_ShangQiJiTuanGou">上汽集团购4月1900A(100201)</string>
    <string name="IDS_ShengYuTianShu">2014-12-12到期(剩余14天)</string>
    <string name="IDS_ShangQiJiTuan">上汽集团</string>
    <string name="IDS_ZongShou">总手</string>
    <string name="IDS_XianShou">现手</string>
    <string name="IDS_ZuiGao">最高</string>
    <string name="IDS_ZuiDi">最低</string>
    <string name="IDS_LiLunJia">理论价</string>
    <string name="IDS_FenShiTu">分时图</string>
    <string name="IDS_RiXian">日线</string>
    <string name="IDS_XinWenGongGao">新闻公告</string>
    <string name="IDS_YanJiuBaoGao">研究报告</string>
    <string name="IDS_JiaZiXuan">加自选</string>
    <string name="IDS_YingKuiFenXi">盈亏分析</string>
    <string name="IDS_ShiJian">时间</string>
    <string name="IDS_BuyYi">买1</string>
    <string name="IDS_BuyEr">买2</string>
    <string name="IDS_BuySan">买3</string>
    <string name="IDS_BuySi">买4</string>
    <string name="IDS_BuyWu">买5</string>
    <string name="IDS_FuDongYingKui">浮动盈亏</string>
    <string name="IDS_ChiCangKeYong">持仓/可用</string>
    <string name="IDS_JunJiaXianJia">均价/现价 </string>
</resources>