<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/optional_scroll_tab"
    android:background="@color/demand_efefef"
    android:descendantFocusability="blocksDescendants" >

    <TextView
        android:id="@+id/item1"
        android:layout_width="@dimen/list_item_width_mid_100dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:minLines="2"
        android:text="@string/IDS_QiQuanName"
        android:textColor="@color/gray_demand_one"
        android:textSize="@dimen/font_optional_C" />

    <ImageButton
        android:id="@+id/item_add_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/zixuan_add"
        android:contentDescription="@string/IDS_TuPianMiaoShu"
        android:focusable="false"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/item_add_minus_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/zixuan_cut"
        android:contentDescription="@string/IDS_TuPianMiaoShu"
        android:focusable="false"
        android:visibility="gone" />

    <com.pengbo.mhdcx.view.InterceptScrollContainer
        android:id="@+id/scroollContainter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toLeftOf="@id/item_add_minus"
        android:layout_toRightOf="@id/item1"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:overScrollMode="never" >

        <com.pengbo.mhdcx.view.MyHScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:overScrollMode="never"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:overScrollMode="never" >

                <TextView
                    android:id="@+id/item2"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:minLines="2"
                    android:text="@string/IDS_ZuiXinJia"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item3"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ZhangDieFu"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item4"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_YiJiaLv"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item5"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_XingQuanJia"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item6"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_BuyJia"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item7"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_BuyLiang"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item8"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_SellJia"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item9"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_SellLiang"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item10"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ZongLiang"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item11"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_XianLiang"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item12"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ChiCangLiang"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item13"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_CangCha"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item14"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_GangGanLv"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item15"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ZhenShiGangGanLv"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item16"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_NeiZaiJiaZhi"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item17"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ShiJianJiaZhi"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item18"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/IDS_ShiXuZhi"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />

                <TextView
                    android:id="@+id/item19"
                    android:layout_width="@dimen/list_item_width_mid_100dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="45dp"
                    android:gravity="center"
                    android:text="@string/IDS_DaoQiRi"
                    android:textColor="@color/gray_demand_one"
                    android:textSize="@dimen/font_optional_C" />
            </LinearLayout>
        </com.pengbo.mhdcx.view.MyHScrollView>
    </com.pengbo.mhdcx.view.InterceptScrollContainer>

</RelativeLayout>